<resources>
    <string name="app_name">User Manager</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido_a_user_manager">Bienvenido a User Manager!</string>
    <string name="listar_usuarios">Listar usuarios</string>
    <string name="insertar_nuevos_usuarios">Insertar usuarios</string>
    <string name="introduce_los_datos_de_los_usuarios_que_quieres_insertar">Introduce los datos de los usuarios que quieres insertar.</string>
    <string name="recuerda_que_ning_n_campo_es_obligario">Recuerda que ningún campo es obligario.</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="n_mero_de_usuarios">Número de usuarios</string>
    <string name="sexo">Sexo</string>
    <string name="fecha_de_registro">Fecha de registro</string>
    <string name="insertar_usuarios">Insertar usuarios</string>
    <string name="ErrorInsertar">No se pueden insertar mas de 5000 usuarios</string>
    <string name="UsuariosDescargados">Se han descargado %1$d usuarios</string>
    <string name="UsuariosInsertados">Se han insertado %1$d usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="registro">Registro</string>
    <string name="g_nero">Género</string>
    <string name="imagen_de_perfil">Imagen</string>
    <string name="localizaci_n">Localización</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="patanlla_principal">Pantalla Principal</string>
    <string name="insertar">Insertar</string>
    <string name="label_pantalla_insertar">Insertar Usuarios</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="home">home</string>
    <string name="qu_quieres_hacer">¿Qué quieres hacer?</string>
    <string name="introduce_tu_nombre_de_usuario_y_contrase_a_para_acceder_a_la_app">Introduce tu nombre de usuario y contraseña para acceder a la app:</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>

    <string-array name="nacionalidades">
        <item>Por defecto</item>
        <item>AU</item>
        <item>BR</item>
        <item>CA</item>
        <item>CH</item>
        <item>DE</item>
        <item>DK</item>
        <item>ES</item>
        <item>FI</item>
        <item>FR</item>
        <item>GB</item>
        <item>IE</item>
        <item>IR</item>
        <item>NL</item>
        <item>NZ</item>
        <item>TR</item>
        <item>US</item>
    </string-array>


</resources>
