<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginTop="12dp"
            android:text="@string/introduce_los_datos_de_los_usuarios_que_quieres_insertar"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/datePicker"
            android:layout_below="@+id/boton_insertar"
            android:layout_marginTop="21dp"
            android:text="@string/recuerda_que_ning_n_campo_es_obligario"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_nacionalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="7dp"
            android:entries="@array/nacionalidades"
            android:prompt="@string/nacionalidad" />

        <CheckBox
            android:id="@+id/box_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="16dp"
            android:text="@string/male" />

        <CheckBox
            android:id="@+id/box_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/box_male"
            android:layout_alignBottom="@+id/box_male"
            android:layout_marginStart="33dp"
            android:layout_toEndOf="@+id/box_male"
            android:text="@string/female" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/box_male"
            android:layout_below="@+id/box_male"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/n_mero_de_usuarios"
            android:inputType="number"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/datePicker"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="11dp"
            android:text="@string/nacionalidad"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner_nacionalidad"
            android:layout_below="@+id/spinner_nacionalidad"
            android:layout_marginTop="22dp"
            android:text="@string/sexo"
            android:textSize="19sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/boton_insertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datePicker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/insertar_usuarios" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginTop="19dp"
            android:text="@string/fecha_de_registro"
            android:textSize="19sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>
