<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tabla"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                tools:ignore="UselessParent"
                android:collapseColumns="5, 6">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/imagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/imagen_de_perfil"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/nombre"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/g_nero"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/registro"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/localizacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/localizaci_n"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/user"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/password"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </HorizontalScrollView>

</ScrollView>
