<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tabla3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="86dp"
                android:layout_height="70dp"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:padding="3dip"
                    android:text="@string/nombre"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:padding="3dip"
                    android:text="@string/registro"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="3dip"
                    android:text="@string/g_nero"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="99dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/localizacion"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="3dip"
                    android:text="@string/localizaci_n"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="3dip"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="3dip"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

        </TableRow>

    </TableLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#303F9F"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tabla2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="86dp"
                        tools:ignore="ContentDescription" />

                    <RelativeLayout
                        android:layout_width="125dp"
                        android:layout_height="match_parent"></RelativeLayout>

                    <RelativeLayout
                        android:layout_width="50dp"
                        android:layout_height="match_parent"></RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"></RelativeLayout>

                    <RelativeLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"></RelativeLayout>

                    <RelativeLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />
                    </RelativeLayout>

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
